refactoring splash page & attempting to fix anims

--- a/story/static/css/sass/components/_menu.scss
+++ b/story/static/css/sass/components/_menu.scss
@@ -1,3 +1,7 @@
+/* 
+Rewrite this menu using absolute positioning so that you can utilize z-index for a prettier animation.
+*/
+
 .menu {
   font-size: $menu-font-size;
   font-weight: 900;
