--- a/story/static/css/sass/main--splash.css
+++ b/story/static/css/sass/main--splash.css
@@ -171,6 +171,7 @@ Rewrite this menu using absolute positioning so that you can utilize z-index for
   background-position: bottom; }
 
 .header {
+  display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr; }
 
