woo, splash page breakpoints added!

--- a/story/static/css/sass/abstracts/variables.scss
+++ b/story/static/css/sass/abstracts/variables.scss
@@ -36,3 +36,7 @@ $color-secondary-dark: #ff7730;
 
 $color-tertiary-light: #2998ff;
 $color-tertiary-dark: #5643fa;
+
+@media screen and (max-width: 500px) {
+    $menu-width: 20rem;
+}
