--- a/story/templates/story/splash_page.html
+++ b/story/templates/story/splash_page.html
@@ -1,19 +1,19 @@
-{# Current Status : Completed page load header anims #} 
-{# TODOS #} 
-{# Complete header #} 
-{# Thinking of using another background image like in natours #} 
-{# Utilize another linear gradient over the image to increase #} 
-{# typeface readability. I like the page padding of natours & header #} 
-{# design. #} 
-{# Create natours style cards for about me and navigation #} 
-{# possibly featuring buttons to other pages #} 
-{% extends 'story/base.html' %} 
-{% load staticfiles %} {% block head_additions %}
-
-<!-- Definitely need to get a linter for jinja -->
-<title>Sage Page</title>{% endblock %} {% block styles %}
-
-<link rel="stylesheet" href="{% static 'css/sass/main--splash.css' %}">{% endblock %}
+{# Current Status : Completed page load header anims #}
+{# TODOS #}
+{# Complete header #}
+{# Thinking of using another background image like in natours #}
+{# Utilize another linear gradient over the image to increase #}
+{# typeface readability. I like the page padding of natours & header #}
+{# design. #}
+{# Create natours style cards for about me and navigation #}
+{# possibly featuring buttons to other pages #}
+{% extends 'story/base.html' %}
+{% load staticfiles %} 
+{% block head_additions %}
+<title>Sage Page</title>{% endblock %} 
+{% block styles %}
+<link rel="stylesheet" href="{% static 'css/sass/main--splash.css' %}">
+{% endblock %}
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous"> {% block header %}
 <header class="header">
@@ -25,7 +25,6 @@
     </div>
     <div class="menu">
         My Work
-    </div>
         <a href="{% url 'post_list' %}" class="menu__btn menu__btn--left">
             Blog
         </a>
@@ -42,7 +41,9 @@
                     class="fab fa-stack-overflow menu__link--media-icon"></i></a>
             <a target="_blank" href="https://twitter.com/sagemph" class="menu__link"><i class="fab fa-twitter menu__link--media-icon"></i></a>
             <a href="#" class="menu__link menu__link--email"><i class="far fa-envelope menu__link--media-icon"></i></a>
-        </nav></header>
+        </nav>
+    </div>
+</header>
 {% endblock %} {% block nav %} {% endblock %} {% block content %}
 <div id="contentWrapper">
 </div>
