--- a/story/static/css/sass/base/typography.scss
+++ b/story/static/css/sass/base/typography.scss
@@ -1,60 +1,72 @@
 .heading__box {
-  padding-top: 20vh;
+    padding-top: 20vh;
+    grid-column: 2 / 5;
+    grid-row: 1 / 2;
 }
 
 .heading-main {
-  color: $color-typo-1;
-  text-transform: uppercase;
-  backface-visibility: hidden;
-  text-align: center;
-  position: relative;
-  transform: translateY(50%);
-  font-family: $font-header;
-  &--sub {
-    font-size: 2.5rem;
-    position: absolute;
-    margin: 0 auto;
-    top: -2.75rem;
-    animation-name: moveInLeft;
-    animation-duration: .8s;
-    animation-timing-function: ease-out;
-    animation-fill-mode: backwards;
-    z-index: 1;
-    font-weight: 400;
-    text-decoration: $color-typo-1;
-    text-decoration-line: underline;
-  }
-  &--main {
-    display: inline-block;
-    font-size: 6rem;
-    z-index: 5;
-    animation: fadeInVertWiggle 1.2s ease-in-out;
-    animation-delay: .9s;
-    animation-fill-mode: backwards;
-    font-weight: 700;
-  }
+    color: $color-typo-1;
+    text-transform: uppercase;
+    backface-visibility: hidden;
+    text-align: center;
+    position: relative;
+    transform: translateY(50%);
+    font-family: $font-header;
+    &--sub {
+        font-size: 2.5rem;
+        position: absolute;
+        margin: 0 auto;
+        top: -2.75rem;
+        animation-name: moveInLeft;
+        animation-duration: .8s;
+        animation-timing-function: ease-out;
+        animation-fill-mode: backwards;
+        z-index: 1;
+        font-weight: 400;
+        text-decoration: $color-typo-1;
+        text-decoration-line: underline;
+    }
+    &--main {
+        display: inline-block;
+        font-size: 6rem;
+        z-index: 5;
+        animation: fadeInVertWiggle 1.2s ease-in-out;
+        animation-delay: .9s;
+        animation-fill-mode: backwards;
+        font-weight: 700;
+    }
 }
 
 .text {
-
-  &__opaque {
-
-  }
-  &__outline {
-    text-shadow: -1px -1px 0 $color-white,
-    1px -1px 0 $color-white,
-    -1px 1px 0 $color-white,
-    1px 1px 0 $color-white;
-  }
+    &__opaque {}
+    &__outline {
+        text-shadow: -1px -1px 0 $color-white, 1px -1px 0 $color-white, -1px 1px 0 $color-white, 1px 1px 0 $color-white;
+    }
 }
 
-//@media screen and (max-width: 800px) {
-//  .heading-main {
-//    &--sub {
-//      font-size: 4rem;
-//    }
-//    &--main {
-//      font-size: 11rem;
-//    }
-//  }
-//}
+@media screen and (max-width: 650px) {
+    .heading-main {
+        &--sub {
+            font-size: 2.5rem;
+        }
+        &--main {
+            font-size: 4.5rem;
+        }
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .heading__box {
+        padding-top: 15vh;
+        grid-column: 1 / -1;
+        grid-row: 1 / 2;
+    }
+    .heading-main {
+        &--sub {
+            font-size: 2.5rem;
+        }
+        &--main {
+            font-size: 4rem;
+        }
+    }
+}
