--- a/story/static/css/sass/layout/_grid.scss
+++ b/story/static/css/sass/layout/_grid.scss
@@ -1,5 +1,5 @@
 .header {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
 }
