worked on colors

--- a/story/static/css/sass/abstracts/variables.scss
+++ b/story/static/css/sass/abstracts/variables.scss
@@ -9,6 +9,7 @@ $color-theme-1: #CAC4CE;
 // TYPOGRAPHY
 $color-typo-1: #eeeeee;
 $font-header: "Open Sans", sans-serif;
+$color-menu-font: #0B212F;
 
 // RESPONSIVE MENU VARIABLES
 $menu-width: 30rem;
@@ -28,8 +29,10 @@ $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
 $color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
+$color-primary-dark: #2314C9;
+$color-primary-light: #1489FF;
+$color-primary-light-old: #7ed56f;
+$color-primary-dark-old: #28b485;
 
 $color-secondary-light: #ffb900;
 $color-secondary-dark: #ff7730;
