--- a/story/static/css/sass/components/_menu.scss
+++ b/story/static/css/sass/components/_menu.scss
@@ -1,7 +1,3 @@
-/* 
-Rewrite this menu using absolute positioning so that you can utilize z-index for a prettier animation.
-All the menu content was originally nested inside of a menu div.
-*/
 
 .menu {
     grid-row: 2 / 3;
@@ -19,8 +15,7 @@ All the menu content was originally nested inside of a menu div.
     margin: 0 auto;
     transform: translateY(40vh);
     border-radius: 3px;
-    border: .5rem solid $color-primary-light;
-    // color: $color-primary-dark;
+    border: .5rem solid $color-primary-light; // color: $color-primary-dark;
     color: $color-menu-font;
     &__btn {
         font-size: $btn-font-size;
@@ -47,7 +42,7 @@ All the menu content was originally nested inside of a menu div.
             height: 80%;
             border-left: none;
             top: 10%;
-            left: 61.5%; 
+            left: 61.5%;
         }
         &--top {
             width: 75%;
@@ -77,22 +72,34 @@ All the menu content was originally nested inside of a menu div.
                     transform: translateX(-99%);
                     color: $color-primary-dark;
                     border-color: $color-primary-light;
+                    &:hover {
+                        transform: translateX(-99%) translateY(-10%) scale(1.05);
+                    }
                 }
                 &--right {
                     transform: translateX(109%);
                     color: $color-primary-dark;
                     border-color: $color-primary-light;
+                    &:hover {
+                        transform: scale(1.05) translateY(-10%) translateX(107%);
+                    }
                 }
                 &--top {
-                    transform: translateY(-99%);
+                    transform: scale(1.05) translateY(-98%);
                     color: $color-primary-dark;
                     border-color: $color-primary-light;
+                    &:hover {
+                      transform: scale(1.10) translateY(-95%);
+                    }
                 }
             }
             &__nav {
-                transform: translateY(99%);
+              transform: translateY(99%) scale(1.15);
                 color: $color-primary-dark;
                 border-color: $color-primary-light;
+                &:hover {
+                  transform: translateY(113%) scale(1.3);
+                }
             }
             &__link {
                 &--media-icon {
@@ -110,26 +117,26 @@ All the menu content was originally nested inside of a menu div.
 }
 
 @media screen and (max-width: 500px) {
-  .menu {
-    grid-row: 3 / -1;
-    grid-column: 1 / -1;
-    max-width: 75%;
-    &__btn {
-      overflow: hidden;
-      &--left, &--right {
-        width: 30%;
-      }
-    }
-    &:hover, &__btn:hover {
-      .menu__btn {
-        &--right {
-          transform: translateX(126.5%);
+    .menu {
+        grid-row: 3 / -1;
+        grid-column: 1 / -1;
+        max-width: 75%;
+        &__btn {
+            overflow: hidden;
+            &--left,
+            &--right {
+                width: 30%;
+            }
         }
-      }
+        &:hover,
+        &__btn:hover {
+            .menu__btn {
+                &--right {
+                    transform: translateX(126.5%);
+                }
+            }
+        }
     }
-  }
 }
 
-@media screen and (max-width: 455px) {
-  
-}
+@media screen and (max-width: 455px) {}
