did work on colors

--- a/story/static/css/sass/pages/splash_page/abstracts/variables.scss
+++ b/story/static/css/sass/pages/splash_page/abstracts/variables.scss
@@ -26,11 +26,16 @@ $mobile-btn-font-size: 1.5rem;
 // EXTRANEOUS
 $color-grey-light-1: #f7f7f7;
 $color-grey-dark: #777;
+
 $color-white: #fff;
 $color-black: #000;
-$color-primary: #55c57a;
+
+$color-primary: #009DDC;
 $color-primary-dark: #2314C9;
+$color-primary-dark-2: #2A2D34;
 $color-primary-light: #1489FF;
+$color-primary-light-2: #F26430;
+
 $color-primary-light-old: #7ed56f;
 $color-primary-dark-old: #28b485;
 
