--- a/story/templates/story/splash_page.html
+++ b/story/templates/story/splash_page.html
@@ -12,7 +12,7 @@
 {% block head_additions %}
 <title>Sage Page</title>{% endblock %}
 {% block styles %}
-<link rel="stylesheet" href="{% static 'css/sass/main--splash.css' %}">
+<link rel="stylesheet" href="{% static 'css/sass/pages/splash_page/main--splash.css' %}">
 {% endblock %}
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous"> {% block header %}
@@ -20,7 +20,7 @@
     <div class="heading__box">
         <h1 class="heading-main">
             <span class="heading-main--sub text__opaque">Welcome to the</span>
-            <span class="heading-main--main">Sage Page</span>
+            <span class="heading-main--main"><span class="heading-main--big-word-1">Sage</span> <span class="heading-main--big-word-2">Page</span></span>
         </h1>
     </div>
     <div class="menu noFlicker">
