--- a/story/static/css/sass/pages/game_page/abstracts/_variables.scss
+++ b/story/static/css/sass/pages/game_page/abstracts/_variables.scss
@@ -7,6 +7,27 @@ $color-grey-dark: #5D5E60;
 $color-onyx: #36413E;
 $color-bg-main: rgb(12, 8, 15);
 
+$color-grey-light-1: #f7f7f7;
+$color-grey-dark: #777;
+
+$color-white: #fff;
+$color-black: #000;
+
+$color-primary: #009DDC;
+$color-primary-dark: #2314C9;
+$color-primary-dark-2: #2A2D34;
+$color-primary-light: #1489FF;
+$color-primary-light-2: #F26430;
+
+$color-primary-light-old: #7ed56f;
+$color-primary-dark-old: #28b485;
+
+$color-secondary-light: #ffb900;
+$color-secondary-dark: #ff7730;
+
+$color-tertiary-light: #2998ff;
+$color-tertiary-dark: #5643fa;
+
 // TYPOGRAPHY
 $color-type-main: rgb(12, 8, 15); 
 
