--- a/story/static/css/sass/pages/game_page/components/_textwrapper.scss
+++ b/story/static/css/sass/pages/game_page/components/_textwrapper.scss
@@ -1,7 +1,9 @@
 .textWrapper {
+    background: rgba($color-grey-light-1, .9);
+    padding: 2.5rem 2rem;
     grid-column: 1 / -1;
     grid-row: 1 / 2;
-    background-color: $color-grey-light;
+    // background-color: $color-grey-light;
     border-radius: 5px;
     width: 75%;
     margin: 0 auto;
@@ -9,6 +11,7 @@
 }
 
 #textBox {
+    line-height: 1.3;
     grid-column: 1 / -1;
     grid-row: 1 / 3;
     box-sizing: content-box;
