--- a/story/static/css/sass/pages/splash_page/main--splash.css
+++ b/story/static/css/sass/pages/splash_page/main--splash.css
@@ -10,6 +10,7 @@ body {
   background-color: #fff; }
 
 .noFlicker {
+  backface-visibility: hidden;
   -webkit-backface-visibility: hidden; }
 
 .heading__box {
