--- a/story/static/css/sass/pages/game_page/components/_mainanimbox.scss
+++ b/story/static/css/sass/pages/game_page/components/_mainanimbox.scss
@@ -1,4 +1,4 @@
-#mainAnimBox {
-    grid-column: 1 / -1;
-    grid-row: 3 / 4;
-}
+// #mainAnimBox {
+//     grid-column: 1 / -1;
+//     grid-row: 3 / 4;
+// }
