--- a/story/static/css/sass/pages/game_page/components/_textwrapper.scss
+++ b/story/static/css/sass/pages/game_page/components/_textwrapper.scss
@@ -1,4 +1,5 @@
 .textWrapper {
+    overflow: hidden;
     background: rgba($color-grey-light-1, .9);
     padding: 2.5rem 2rem;
     grid-column: 1 / -1;
@@ -8,6 +9,13 @@
     width: 75%;
     margin: 0 auto;
     box-shadow: 1px 3px 3px 1px rgba($color-black, .3);
+}
+
+#storyWelcome {
+    overflow-x: hidden;
+    // padding-right: 20rem;
+    // margin-right: 2rem;
+    height: inherit;
 }
 
 #textBox {
@@ -20,5 +28,6 @@
     overflow: auto;
     width: 100%;
     height: 100%;
-    padding-right: 20px;
+    // margin-right: 2rem;
+    padding-right: 2rem;
 }
