--- a/story/static/css/sass/pages/game_page/main.css
+++ b/story/static/css/sass/pages/game_page/main.css
@@ -44,6 +44,9 @@ body {
   font-size: 1.5rem;
   color: #0c080f; }
 
+@media screen and (max-width: 455) {
+  #storyWelcome {
+    font-size: 2.5rem; } }
 #storyWrapper {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
@@ -54,6 +57,7 @@ body {
   /*box-shadow: 5px 10px */ }
 
 .textWrapper {
+  overflow: hidden;
   background: rgba(247, 247, 247, 0.9);
   padding: 2.5rem 2rem;
   grid-column: 1 / -1;
@@ -62,6 +66,10 @@ body {
   width: 75%;
   margin: 0 auto;
   box-shadow: 1px 3px 3px 1px rgba(0, 0, 0, 0.3); }
+
+#storyWelcome {
+  overflow-x: hidden;
+  height: inherit; }
 
 #textBox {
   line-height: 1.3;
@@ -73,15 +81,11 @@ body {
   overflow: auto;
   width: 100%;
   height: 100%;
-  padding-right: 20px; }
-
-#mainAnimBox {
-  grid-column: 1 / -1;
-  grid-row: 3 / 4; }
+  padding-right: 2rem; }
 
 #selectionBox {
   grid-column: 1 / -1;
-  grid-row: 4 / 5;
+  grid-row: 3 / 5;
   display: block;
   justify-content: center;
   align-items: center;
